--- a/about.html
+++ b/about.html
@@ -29,24 +29,31 @@
 <h1 class="title">Kyle Booten</h1>
 </header>
 <hr />
-<h5 id="noöhacking"><a href="noohacking.html">Noöhacking</a></h5>
-<h5 id="book-gyms"><a href="gymsbook.html">BOOK: Gyms</a></h5>
-<h5 id="book-salon-des-fantômes"><a href="salon.html">BOOK: Salon des
-Fantômes</a></h5>
+<h5 id="gyms-book"><a href="gymsbook.html">Gyms (book)</a></h5>
+<h5 id="salon-des-fantômes-book"><a href="salon.html">Salon des Fantômes
+(book)</a></h5>
 <!-- ##### [To Pray Without Ceasing](topray.html)
  -->
-<h5 id="word-gyms"><a href="progym.html">Word Gyms</a></h5>
-<h5 id="ensemble-park"><a href="ensemble.html">Ensemble Park</a></h5>
-<h5 id="selected-publications"><a href="index.html">Selected
-Publications</a></h5>
-<h5 id="about"><a href="about.html">About*</a></h5>
+<h5 id="ensemble-park-editorial"><a href="ensemble.html">Ensemble Park
+(editorial)</a></h5>
+<h5 id="noöhacking-concept"><a href="noohacking.html">Noöhacking
+(concept)</a></h5>
+<h5 id="word-gyms-concept"><a href="progym.html">Word Gyms
+(concept)</a></h5>
+<h5 id="selectedrecent-publications"><a
+href="index.html">Selected/Recent Publications</a></h5>
+<!-- ##### [About*](about.html) -->
 <hr />
 <p>Assistant Professor, Dept. of English, UConn, Storrs</p>
-<p>Previous: Neukom Postdoctoral Fellow, Dartmouth College</p>
-<p>Ph.D., UC Berkeley</p>
-<p>2016 Spencer/NAEd Dissertation Fellow</p>
-<p>M.F.A., University of Michigan, Ann Arbor</p>
-<p>A.B., Princeton University</p>
+<!-- Previous: Neukom Postdoctoral Fellow, Dartmouth College  
+  
+Ph.D., UC Berkeley  
+  
+2016 Spencer/NAEd Dissertation Fellow  
+  
+M.F.A., University of Michigan, Ann Arbor  
+  
+A.B., Princeton University   -->
 <p><br><br />
 Researching the algorithmic mediation of thought, especially poetic
 thought</p>
