--- a/noohacking.html
+++ b/noohacking.html
@@ -29,17 +29,20 @@
 <h1 class="title">Kyle Booten</h1>
 </header>
 <hr />
-<h5 id="noöhacking"><a href="noohacking.html">Noöhacking*</a></h5>
-<h5 id="book-gyms"><a href="gymsbook.html">BOOK: Gyms</a></h5>
-<h5 id="book-salon-des-fantômes"><a href="salon.html">BOOK: Salon des
-Fantômes</a></h5>
+<h5 id="gyms-book"><a href="gymsbook.html">Gyms (book)</a></h5>
+<h5 id="salon-des-fantômes-book"><a href="salon.html">Salon des Fantômes
+(book)</a></h5>
 <!-- ##### [To Pray Without Ceasing](topray.html)
  -->
-<h5 id="word-gyms"><a href="progym.html">Word Gyms</a></h5>
-<h5 id="ensemble-park"><a href="ensemble.html">Ensemble Park</a></h5>
-<h5 id="selected-publications"><a href="index.html">Selected
-Publications</a></h5>
-<h5 id="about"><a href="about.html">About</a></h5>
+<h5 id="ensemble-park-editorial"><a href="ensemble.html">Ensemble Park
+(editorial)</a></h5>
+<h5 id="noöhacking-concept"><a href="noohacking.html">Noöhacking
+(concept)*</a></h5>
+<h5 id="word-gyms-concept"><a href="progym.html">Word Gyms
+(concept)</a></h5>
+<h5 id="selectedrecent-publications"><a
+href="index.html">Selected/Recent Publications</a></h5>
+<!-- ##### [About](about.html) -->
 <hr />
 <p><em>Noöhacking</em><a href="#fn1" class="footnote-ref" id="fnref1"
 role="doc-noteref"><sup>1</sup></a> is the title of my current research
