--- a/regex_gym.html
+++ b/regex_gym.html
@@ -30,10 +30,11 @@
 <div id="instructions">
 On the left, match pattern in your text using <em>regular expressions</em>.<br>
 On the right, leave notes to annotate these textual patterns.<br><br>
-What feedback could you plan, now, to give yourself later, after you have written?<br><br>
+What feedback could you plan to give yourself later, after you have written?<br><br>
 What patterns do you notice in your writing that you might want to correct?<br>
 Or challenge?<br>
 Or emphasize?<br><br>
+How could you give your future self something else to think about, some other stretch to perform?<br>
 </div>
 <table>
   <tr><td><input class="regex" placeholder="pattern 1"></td><td><input class="message" placeholder="message to yourself 1"></td></tr>
