--- a/misc/gyms_image.html
+++ b/misc/gyms_image.html
@@ -2,7 +2,7 @@
 <html>
 <head>
   <meta charset="UTF-8">
-  <title>Brutalist Image Page</title>
+  <title>REG image for reading</title>
   <style>
     body {
       background: #fff;
