--- a/index.html
+++ b/index.html
@@ -45,8 +45,8 @@ href="index.html">Selected/Recent Publications*</a></h5>
 <!-- ##### [About](about.html) -->
 <hr />
 <ul>
-<li><p><a href="/https://github.com/kbooten/gymsbook">New book: GYMS
-(dispersed holdings 2025)</a></p></li>
+<li><p><a href="gymsbook.html">New book: GYMS (dispersed holdings
+2025)</a></p></li>
 <li><p><a
 href="https://read.dukeupress.edu/critical-ai/article/doi/10.1215/2834703X-11205189/390865/Build-Word-Gyms-Not-Word-Factories?guestAccessKey=494190cc-59d2-43d2-bdff-6b162571ceac"
 target="_blank">Article on “Word Gyms” in CRITICAL AI #2</a></p></li>
