--- a/index.html
+++ b/index.html
@@ -63,6 +63,8 @@ target="_blank">Poems injected with allusions in BLACKBOX MANIFOLD
 href="https://www.cabinetmagazine.org/books/the_virtual_sentence.php"
 target="_blank">A linguistic exercise in THE VIRTUAL SENTENCE (CABINET
 2024)</a></p></li>
+<li><p><a href="https://taper.badquar.to/14/sonnet_gym.html"
+target="_blank">A very small sonnet gym in TAPER #14</a></p></li>
 <li><p><a href="https://2023.xcoax.org/pdf/booten.pdf"
 target="_blank">Paper on a writing-workshop simulator at XCOAX
 2023</a></p></li>
