--- a/misc/gyms_image.html
+++ b/misc/gyms_image.html
@@ -30,12 +30,16 @@
     }
 
     .caption a {
-      color: #00cc00;
+      color: black;
       text-decoration: underline;
     }
 
     .caption a:hover {
       text-decoration: underline;
+    }
+
+    #title{
+      color: #00cc00;
     }
   </style>
 </head>
@@ -43,7 +47,9 @@
 
   <div class="block">
     <img src="https://collectionapi.metmuseum.org/api/collection/v1/iiif/625453/1380851/main-image" alt="'Figure on horseback holding a sword and riding over a figure lying on the ground, set within an elaborate frame' (Battista Angolo del Moro)">
-
+    <div class="caption" id="title">
+      "Figure on horseback holding a sword and riding over a figure lying on the ground, set within an elaborate frame"
+    </div>  
     <div class="caption">
       From <a href="https://asterismbooks.com/product/gyms-kyle-booten" target="_blank"><em>Gyms</em></a> (Kyle Booten, dispersed holdings 2025). Recursive Ekphrastic Gym selects an artwork from The Met's open access collection and tasks the writer with describing its various features, recursively.
     </div>
