--- a/misc/gyms_image.html
+++ b/misc/gyms_image.html
@@ -13,7 +13,7 @@
     }
 
     .block {
-      max-width: 600px;
+      width: 100wv;
       margin: 0 auto;
     }
 
@@ -49,7 +49,8 @@
     <img src="https://collectionapi.metmuseum.org/api/collection/v1/iiif/625453/1380851/main-image" alt="'Figure on horseback holding a sword and riding over a figure lying on the ground, set within an elaborate frame' (Battista Angolo del Moro)">
     <div class="caption" id="title">
       "Figure on horseback holding a sword and riding over a figure lying on the ground, set within an elaborate frame"
-    </div>  
+    </div>
+    <br><br>
     <div class="caption">
       From <a href="https://asterismbooks.com/product/gyms-kyle-booten" target="_blank"><em>Gyms</em></a> (Kyle Booten, dispersed holdings 2025). Recursive Ekphrastic Gym selects an artwork from The Met's open access collection and tasks the writer with describing its various features, recursively.
     </div>
