--- a/index.html
+++ b/index.html
@@ -59,6 +59,13 @@ target="_blank">Poems injected with allusions in BLACKBOX MANIFOLD
     - [FloraNote, a garden-like note-taking app where notes must be periodically weeded](https://taper.badquar.to/12/floranote.html){target="_blank"}
     - [Yearlong Meditation App](https://taper.badquar.to/12/yearlong_meditation_app.html){target="_blank"} -->
 <ul>
+<li><p>“Google Hyperdrive,” a small generator of interesting Google
+queries, in <a href="https://badquar.to/publications/run_run_run.html"
+target="_blank">RUN RUN RUN (BAD QUARTO)</a></p>
+<ul>
+<li><a href="resources/google_hyperdrive.py"
+target="_blank">code</a></li>
+</ul></li>
 <li><p><a
 href="https://www.cabinetmagazine.org/books/the_virtual_sentence.php"
 target="_blank">A linguistic exercise in THE VIRTUAL SENTENCE (CABINET
@@ -72,7 +79,7 @@ target="_blank">Paper on a writing-workshop simulator at XCOAX
 href="https://badquar.to/publications/our_generation.html"
 target="_blank">OUR GENERATION (BAD QUARTO)</a></p>
 <ul>
-<li><a href="resources/leaping_loom.txt" target="_blank">code</a></li>
+<li><a href="resources/leaping_loom.py" target="_blank">code</a></li>
 </ul></li>
 <li><p><a
 href="https://blackboxmanifold.sites.sheffield.ac.uk/issues/issues-21-28/issue-28"
