--- a/gymsbook.html
+++ b/gymsbook.html
@@ -45,9 +45,14 @@ href="index.html">Selected/Recent Publications</a></h5>
 <!-- ##### [About](about.html) -->
 <hr />
 <p>dispersed holdings (2025)</p>
-<p>Poems written with nine custom “word gyms,” algorithmic systems
-designed to place my poetic faculties under stress and strain.</p>
-<p>Find it <a href="https://asterismbooks.com/product/gyms-kyle-booten"
-target="_blank">here</a>.</p>
+<p><em>Gyms</em>(https://asterismbooks.com/product/gyms-kyle-booten){target=“_blank”}
+is a book of poems written with nine custom “word gyms,” algorithmic
+systems designed to place my poetic faculties under stress and strain.
+With these gyms, I attempt to use digital media—which is often so
+toxic—to sternly care for my own mind. The gyms force me to deploy
+obscure allusions, weighty words, and off-kilter metaphorical conceits.
+They twist my language beyond its normal syntax and comfortable diction.
+They help me to pay close attention to works of art and to the world I
+inhabit.</p>
 </div></body>
 </html>
