--- a/salon.html
+++ b/salon.html
@@ -56,24 +56,16 @@ assailed them with what I call “streptohormetic prompt
 engineering”—randomly-generated commands (Your reply must use the word
 “cathexis.”), randomly-generated questions (What’s better—Jarman’s
 “Blue” or Emin’s “My Bed”?), text-transforming potions, and other
-linguistic perturbations and stressors.</p>
-<p>A salon is a success if its guests are more insightful together than
-they would have been apart. Did this virtual salon enable me to grow any
-prizable throught-crystals? Or did my interlocutors lure me into
-LLM-like anodyne stupidity? These are empirical questions, and <em>Salon
-des Fantômes</em> is where I have collected some data necessary to
-answer them.</p>
-<p>This salon is another example of what I call a <a
-href="progym.html">“word-gym”</a>.</p>
-<p><br> <br></p>
-<p>Salon des Fantômes is also the name of the software that made the
-book possible, an intricate LLM “wrapper” that both manages the salon
-and uses relatively “unintelligent” techniques of text-generation to
-create prompts. My goal was to explore the ways that these older,
-simpler techniques—far from outmoded—could be crucial for making AI
-stranger and more worth talking too.</p>
-<p>Code available <a
-href="https://github.com/kbooten/salon_des_fantomes/tree/main"
-target="_blank">here</a>.</p>
+linguistic perturbations and stressors.<!--  
+
+A salon is a success if its guests are more insightful together than they would have been apart. Did this virtual salon enable me to grow any prizable throught-crystals? Or did my interlocutors lure me into LLM-like anodyne stupidity? These are empirical questions, and *Salon des Fantômes* is where I have collected some data necessary to answer them.
+
+This salon is another example of what I call a ["word-gym"](progym.html).
+
+<br>
+<br>
+
+Salon des Fantômes is also the name of the software that made the book possible, an intricate LLM "wrapper" that both manages the salon and uses relatively "unintelligent" techniques of text-generation to create prompts.  My goal was to explore the ways that these older, simpler techniques---far from outmoded---could be crucial for making AI stranger and more worth talking too. --></p>
+<!-- Code available [here](https://github.com/kbooten/salon_des_fantomes/tree/main){target="_blank"}. -->
 </div></body>
 </html>
