--- a/salon.html
+++ b/salon.html
@@ -44,19 +44,20 @@
 href="index.html">Selected/Recent Publications</a></h5>
 <!-- ##### [About](about.html) -->
 <hr />
-<p><a href="https://asterismbooks.com/product/salon-des-fantomes"
-target="_blank"><em>Salon des Fantômes; or, Streptohormetic Prompt
-Engineering for the Production of a Jagged Noetic Substrate</em> (Inside
-the Castle 2024)</a> is a book-length record of a five-day philosophical
-and artistic salon in which I was the only human attendee, the others
-being over twenty AI-fabricated interlocutors (an architect from
-Soviet-era Riga, an anthropomorphic and monosyllabic mountain, etc.). In
-order to make these characters less boring and more worth talking to, I
-assailed them with what I call “streptohormetic prompt
-engineering”—randomly-generated commands (Your reply must use the word
-“cathexis.”), randomly-generated questions (What’s better—Jarman’s
-“Blue” or Emin’s “My Bed”?), text-transforming potions, and other
-linguistic perturbations and stressors.<!--  
+<p>Inside the Castle (2024)</p>
+<p>[<em>Salon des Fantômes; or, Streptohormetic Prompt Engineering for
+the Production of a Jagged Noetic
+Substrate</em>(https://asterismbooks.com/product/salon-des-fantomes){target=“_blank”}
+is a book-length record of a five-day philosophical and artistic salon
+in which I was the only human attendee, the others being over twenty
+AI-fabricated interlocutors (an architect from Soviet-era Riga, an
+anthropomorphic and monosyllabic mountain, etc.). In order to make these
+characters less boring and more worth talking to, I assailed them with
+what I call “streptohormetic prompt engineering”—randomly-generated
+commands (Your reply must use the word “cathexis.”), randomly-generated
+questions (What’s better—Jarman’s “Blue” or Emin’s “My Bed”?),
+text-transforming potions, and other linguistic perturbations and
+stressors.<!--  
 
 A salon is a success if its guests are more insightful together than they would have been apart. Did this virtual salon enable me to grow any prizable throught-crystals? Or did my interlocutors lure me into LLM-like anodyne stupidity? These are empirical questions, and *Salon des Fantômes* is where I have collected some data necessary to answer them.
 
@@ -66,6 +67,8 @@ This salon is another example of what I call a ["word-gym"](progym.html).
 <br>
 
 Salon des Fantômes is also the name of the software that made the book possible, an intricate LLM "wrapper" that both manages the salon and uses relatively "unintelligent" techniques of text-generation to create prompts.  My goal was to explore the ways that these older, simpler techniques---far from outmoded---could be crucial for making AI stranger and more worth talking too. --></p>
-<!-- Code available [here](https://github.com/kbooten/salon_des_fantomes/tree/main){target="_blank"}. -->
+<p>Code available <a
+href="https://github.com/kbooten/salon_des_fantomes/tree/main"
+target="_blank">here</a>.</p>
 </div></body>
 </html>
