--- a/salon.html
+++ b/salon.html
@@ -45,11 +45,11 @@ href="index.html">Selected/Recent Publications</a></h5>
 <!-- ##### [About](about.html) -->
 <hr />
 <p>Inside the Castle (2024)</p>
-<p>[<em>Salon des Fantômes; or, Streptohormetic Prompt Engineering for
-the Production of a Jagged Noetic
-Substrate</em>(https://asterismbooks.com/product/salon-des-fantomes){target=“_blank”}
-is a book-length record of a five-day philosophical and artistic salon
-in which I was the only human attendee, the others being over twenty
+<p><a href="https://asterismbooks.com/product/salon-des-fantomes"
+target="_blank"><em>Salon des Fantômes; or, Streptohormetic Prompt
+Engineering for the Production of a Jagged Noetic Substrate</em></a> is
+a book-length record of a five-day philosophical and artistic salon in
+which I was the only human attendee, the others being over twenty
 AI-fabricated interlocutors (an architect from Soviet-era Riga, an
 anthropomorphic and monosyllabic mountain, etc.). In order to make these
 characters less boring and more worth talking to, I assailed them with
