--- a/resources/ifthen_convo_gym.html
+++ b/resources/ifthen_convo_gym.html
@@ -198,7 +198,7 @@
       },
     ];
 
-    const SLOT_LENGTH = 120000; // 2 minutes
+    const SLOT_LENGTH = 60000; 
 
     // ========= RANDOM GEN =========
     function mulberry32(seed) {
