--- a/resources/ifthen_convo_gym.html
+++ b/resources/ifthen_convo_gym.html
@@ -153,7 +153,7 @@
       },
       {
         text:
-"LAURENT DUBREIL: 'Poetry tends to exceed its own algorithms.'\u00A0<a href='https://fordhampress.com/poetry-and-mind-hb-9780823279630.html' target='_blank' rel='noopener noreferrer'>→</a>",
+"LAURENT DUBREUIL: 'Poetry tends to exceed its own algorithms.'\u00A0<a href='https://fordhampress.com/poetry-and-mind-hb-9780823279630.html' target='_blank' rel='noopener noreferrer'>→</a>",
         terms: ["excess","algorithmic logic","poetry","thought"]
       },
       {
