--- a/index.html
+++ b/index.html
@@ -51,6 +51,10 @@ href="index.html">Selected/Recent Publications*</a></h5>
 href="https://read.dukeupress.edu/critical-ai/article/doi/10.1215/2834703X-11205189/390865/Build-Word-Gyms-Not-Word-Factories?guestAccessKey=494190cc-59d2-43d2-bdff-6b162571ceac"
 target="_blank">Article on “Word Gyms” in CRITICAL AI #2</a></p></li>
 <li><p><a
+href="https://sites.lsa.umich.edu/mqr/current-issue-fall-2025/"
+target="_blank">Poems in special issue of MICHIGAN QUARTERLY
+REVIEW</a></p></li>
+<li><p><a
 href="https://blackboxmanifold.sites.sheffield.ac.uk/issues/issue-31/kylebootenbm31"
 target="_blank">Poems injected with allusions in BLACKBOX MANIFOLD
 #31</a></p></li>
