--- a/index.html
+++ b/index.html
@@ -52,8 +52,8 @@ href="https://read.dukeupress.edu/critical-ai/article/doi/10.1215/2834703X-11205
 target="_blank">Article on “Word Gyms” in CRITICAL AI #2</a></p></li>
 <li><p><a
 href="https://sites.lsa.umich.edu/mqr/current-issue-fall-2025/"
-target="_blank">Poems in special issue of MICHIGAN QUARTERLY
-REVIEW</a></p></li>
+target="_blank">Poems in MICHIGAN QUARTERLY REVIEW’s “special issue on
+computer-generated text”</a></p></li>
 <li><p><a
 href="https://blackboxmanifold.sites.sheffield.ac.uk/issues/issue-31/kylebootenbm31"
 target="_blank">Poems injected with allusions in BLACKBOX MANIFOLD
