--- a/noohacking.html
+++ b/noohacking.html
@@ -51,14 +51,16 @@ media users build and repurpose algorithmic tools in order to take care
 of their own minds/spirits, an especially challenging and important task
 amidst a digital milieu that seems designed to make us alienated,
 unintelligent, and miserable.</p>
-<p>My current book-in-progress—also called <em>Noöhacking</em>—describes
-some of the key technologies through which an individual can engage in
-this practice, including browser extensions, social media bots,
-algorithmic writing assistants, and mind-mapping tools. This book also
-theorizes some of the ways that current educational institutions can
-support their endeavor, and it describes some of my own attempts to
-“hack” my own “noos,” including my <a href="progym.html">word-gyms that
-try to make writing (beneficially) harder</a> and my <a
+<p>My current book-in-progress<a href="#fn2" class="footnote-ref"
+id="fnref2" role="doc-noteref"><sup>2</sup></a>—also called
+<em>Noöhacking</em>—describes some of the key technologies through which
+an individual can engage in this practice, including browser extensions,
+social media bots, algorithmic writing assistants, and mind-mapping
+tools. This book also theorizes some of the ways that current
+educational institutions can support their endeavor, and it describes
+some of my own attempts to “hack” my own “noos,” including my <a
+href="progym.html">word-gyms that try to make writing (beneficially)
+harder</a> and my <a
 href="https://electronicbookreview.com/essay/how-to-re-hijack-your-mind-critical-making-and-the-battle-for-intelligence/"
 target="_blank">browser extension that attempts to “re-hijack” my
 scattered attention</a>.</p>
@@ -69,6 +71,8 @@ role="doc-endnotes">
 <li id="fn1"><p>“Noohacking” is fine too, but I prefer the pips over the
 second “o”.<a href="#fnref1" class="footnote-back"
 role="doc-backlink">↩︎</a></p></li>
+<li id="fn2"><p>Under contract with Stanford UP.<a href="#fnref2"
+class="footnote-back" role="doc-backlink">↩︎</a></p></li>
 </ol>
 </section>
 </div></body>
