--- a/index.html
+++ b/index.html
@@ -55,6 +55,11 @@ href="https://sites.lsa.umich.edu/mqr/current-issue-fall-2025/"
 target="_blank">Poems in MICHIGAN QUARTERLY REVIEW’s “special issue on
 computer-generated text”</a></p></li>
 <li><p><a
+href="https://www.upress.umn.edu/9781517916084/critical-infrastructure-studies-and-digital-humanities/"
+target="_blank">Speculative essay imagining alternative scholarly
+metrics in CRITICAL INFRASTRUCTURE STUDIES AND DIGITAL
+HUMANITIES.</a></p></li>
+<li><p><a
 href="https://blackboxmanifold.sites.sheffield.ac.uk/issues/issue-31/kylebootenbm31"
 target="_blank">Poems injected with allusions in BLACKBOX MANIFOLD
 #31</a></p></li>
