--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@ href="index.html">Selected/Recent Publications*</a></h5>
 2025)</a></p></li>
 <li><p><a
 href="https://read.dukeupress.edu/critical-ai/article/doi/10.1215/2834703X-11205189/390865/Build-Word-Gyms-Not-Word-Factories?guestAccessKey=494190cc-59d2-43d2-bdff-6b162571ceac"
-target="_blank">Article on “Word Gyms” in CRITICAL AI #2</a></p></li>
+target="_blank">Essay on “Word Gyms” in CRITICAL AI #2</a></p></li>
 <li><p><a
 href="https://sites.lsa.umich.edu/mqr/current-issue-fall-2025/"
 target="_blank">Poems in MICHIGAN QUARTERLY REVIEW’s “special issue on
@@ -57,8 +57,8 @@ computer-generated text”</a></p></li>
 <li><p><a
 href="https://www.upress.umn.edu/9781517916084/critical-infrastructure-studies-and-digital-humanities/"
 target="_blank">Speculative essay imagining alternative scholarly
-metrics in CRITICAL INFRASTRUCTURE STUDIES AND DIGITAL
-HUMANITIES.</a></p></li>
+metrics in CRITICAL INFRASTRUCTURE STUDIES AND DIGITAL HUMANITIES (U of
+Minnesota Press)</a></p></li>
 <li><p><a
 href="https://blackboxmanifold.sites.sheffield.ac.uk/issues/issue-31/kylebootenbm31"
 target="_blank">Poems injected with allusions in BLACKBOX MANIFOLD
@@ -68,9 +68,9 @@ target="_blank">Poems injected with allusions in BLACKBOX MANIFOLD
     - [FloraNote, a garden-like note-taking app where notes must be periodically weeded](https://taper.badquar.to/12/floranote.html){target="_blank"}
     - [Yearlong Meditation App](https://taper.badquar.to/12/yearlong_meditation_app.html){target="_blank"} -->
 <ul>
-<li><p>“Google Hyperdrive,” a small generator of interesting Google
-queries, in <a href="https://badquar.to/publications/run_run_run.html"
-target="_blank">RUN RUN RUN (BAD QUARTO)</a></p>
+<li><p><a href="https://badquar.to/publications/run_run_run.html"
+target="_blank">“Google Hyperdrive,” a small generator of interesting
+Google queries, in RUN RUN RUN (Bad Quarto)</a></p>
 <ul>
 <li><a href="resources/google_hyperdrive.py"
 target="_blank">code</a></li>
@@ -84,9 +84,9 @@ target="_blank">A very small sonnet gym in TAPER #14</a></p></li>
 <li><p><a href="https://2023.xcoax.org/pdf/booten.pdf"
 target="_blank">Paper on a writing-workshop simulator at XCOAX
 2023</a></p></li>
-<li><p>“Leaping Loom,” a small computer-generated poetic form, in <a
-href="https://badquar.to/publications/our_generation.html"
-target="_blank">OUR GENERATION (BAD QUARTO)</a></p>
+<li><p><a href="https://badquar.to/publications/our_generation.html"
+target="_blank">“Leaping Loom,” a small computer-generated poetic form,
+in OUR GENERATION (Bad Quarto)</a></p>
 <ul>
 <li><a href="resources/leaping_loom.py" target="_blank">code</a></li>
 </ul></li>
